i don't remember the changes. spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ li {
     margin-left: 50px;
 }
 
+.month-title {
+    margin-top: 50px;
+}
+
 .bold {
     font-family: "NeueMontreal-bold";
 }
